--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,12 @@
 .App {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.App-NavBar {
+}
+
+.App-body {
 }
 
 .App-logo {
@@ -13,19 +20,14 @@
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
 
 .App-link {
   color: #61dafb;
+}
+
+.Site-header {
+  display: flex;
+  justify-content: space-between;
 }
 
 @keyframes App-logo-spin {
